--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PersonalSite",
+  "name": "site",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,8 +12,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@rhysforyou/gatsby-plugin-react-helmet-async": "^0.1.3",
-    "gatsby": "^2.23.21",
-    "gatsby-plugin-emotion": "^4.3.9",
+    "gatsby": "^2.24.37",
+    "gatsby-plugin-emotion": "^4.3.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.6"
